# approximate-string-matching

./: .gitignore  LICENSE  README.md  notes.md
GASMA/: CMakeLists.txt  Makefile  bit_convert.cpp  bit_convert.h  hurdle_matrix.cpp  hurdle_matrix.h  hurdle_matrix_flipped.h  hurdle_matrix_projected.h  main.cpp  mask.cpp  mask.h  note  seqan3_main.cpp  seqan3_main.h  utils.h
GASMA/GASMA/: CMakeLists.txt  Makefile  hurdle_matrix.cpp
GASMA/benchmark/: README.md  benchmark.cpp  benchmark_coverage.h  benchmark_dataset.h  benchmark_utils.h  notes
GASMA/benchmark/LEAP_SIMD/: CMakeLists.txt  LV.cpp  LV.h  LV_BAG.cpp  LV_BAG.h  README.md  SHD.cpp  SHD.h  SIMD_ED.cpp  SIMD_ED.h  bit_convert.cpp  bit_convert.h  main.cpp  mask.cpp  mask.h  popcount.cpp  popcount.h  print.cpp  print.h  shift.cpp  shift.h
GASMA/benchmark/util/: Makefile  generate_dataset.c
GASMA/mapper/: indexer.cpp  main.cpp
GASMA/test/: test_hurdle_matrix.cpp  test_hurdle_matrix_flipped.cpp  test_hurdle_matrix_projected.cpp
algorithms/: LEAP.py  greedy.py  util.py
annotated_bowtie2/: aligner_swsse_ee_i16.cpp  aligner_swsse_ee_u8.cpp
pymatch/: __init__.py  util.py
pymatch/algorithms/: LEAP.py  LandauVishkin.py  MSA.py  NeedlemanWunsch.py  __init__.py  gasma.py  greedy.py  greedyShortsighted.py
pymatch/metrics/: README.md  __init__.py  coverage.py  numLeaps.py
pymatch/test/: note  test_greedy.py  test_gs.py  test_gs_single.py  test_nw.py
